--- a/README
+++ b/README
@@ -1,17 +1,17 @@
 MIPS instruction simulator in C
 ===============================
 
-This project is a C-based simulator for a subset of the MIPS instruction 
-set architecture. It aims to provide a practical understanding of how MIPS 
-instructions are executed at a low level.
+This project is a C-based simulator for a subset of the MIPS 
+instruction set architecture. It aims to provide a practical 
+understanding of how MIPS instructions are executed at a low level.
 
 How to run (using MinGW): 
 
     > gcc MIPS.c -o MIPS.exe
     > MIPS.exe 
 
-The simulator may require an input file containing MIPS instructions 
-or accept input via standard input. Refer to the source code for specific 
-usage details.
+The simulator may require an input file containing MIPS 
+instructions or accept input via standard input. Refer to 
+the source code for specific usage details.
 
 This project is licensed under the MIT License.
