--- a/README
+++ b/README
@@ -3,7 +3,8 @@ MIPS instruction simulator in C
 
 This project is a C-based simulator for a subset of the MIPS 
 instruction set architecture. It aims to provide a practical 
-understanding of how MIPS instructions are executed at a low level.
+understanding of how MIPS instructions are executed at a low 
+level.
 
 How to run (using MinGW): 
 
